# children_ai_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: README  env.py
app/: config.py  html_page.py  main.py
backend/: .env  config.py  conversation.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e692f6a753f_create_messages_table.py
backend/chroma/: chroma.sqlite3
backend/core/: conversation_message.py  intent_router.py  language.py  llm_client.py  role.py  role_blue_rocket.py  role_start_voice.py  story.py  summarization.py  system_prompt.py  text_segmenter.py  user.py  user_intent.py  wangwangdui.py
backend/mqtt/: event.py  manager.py  publisher.py  subscription.py
backend/repository/: message.py
backend/service/: audio_service.py  conversation_service.py  streaming_asr_demo.py  tts_websocket_demo.py
backend/service/asr/: streaming_asr_demo.py
backend/service/rag/: chroma.py  etl.py  rag_story_wangwangdui.py
backend/service/tts/: openai_tts.py  tts_service.py  tts_websocket_demo.py
backend/test/core/: test_conversation_message.py  test_intent_router.py  test_role.py  test_story.py  test_summarization.py  test_system_prompt.py  test_text_segmenter.py  test_user_intent.py
backend/test/repository/: test_message.py
backend/test/service/: test_audio_service.py  test_conversation_service.py
backend/test/service/rag/: test_etl.py  test_rag_story_wangwangdui.py
backend/tests/core/: test_intent_router.py
backend/udp/: client.py  server.py
backend/utils/: uuid_util.py
chroma/: chroma.sqlite3
(+89 files in other folders)
