[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The API for Children AI Assistant"
authors = ["qicaisheng <qicaisheng@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
openai = "^1.37.1"
gradio = "^4.39.0"
paho-mqtt = "^2.1.0"
aiohttp = "^3.10.5"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
bs4 = "^0.0.2"
langchain-chroma = "^0.1.3"
zhipuai = "^2.1.5.20230904"
llama-index = "^0.11.7"
alembic = "^1.13.2"
psycopg = "^3.2.1"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
testcontainers = {extras = ["postgresql"], version = "^4.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
